test/libsolidity/syntaxTests/operators/custom/bind_keccak_function.sol
type Int is int16;

using {keccak256 as +} for Int;

// ----
// TypeError 8187: (27-36): Expected function name.
